--- a/new 3.html
+++ b/new 3.html
@@ -79,7 +79,7 @@
     <p id="brandText">dentists ju21</p>
 
     <!-- حقل البحث -->
-    <label for="name">❤:</label>
+    <label for="name">❤</label>
     <input type="text" id="name" placeholder="your name" oninput="toggleSearchButton()">
     <button id="searchButton" onclick="countdownAndShowAnswer()">Go to Message❤</button>
 
